# PCL_exercises

exercise1/: README.md  sentiment_analysis.py  test_sentiment_analysis.py  test_shubhiversion_sentiment_analysis.py  tokens.txt
exercise2/: .gitignore  .gitlab-ci.yml  feature_extraction.py  test_eng.txt  test_feature_extraction.py  test_port.txt
exercise3/: .gitlab-ci.yml  gitlab-ci.yml  pyproject.toml
exercise3/TextAnalyserIndices/: __init__.py  analyser.py
exercise3/src/: readability_analysis.py
exercise3/src/TextAnalyserIndices/: __main__.py  analyser.py  indices.py
exercise3/tests/: test_analyser.py  test_indices.py
exercise4/: README.md  ex4.py
exercise5/: README.md  exercise_05.ipynb
exercise6/: PLEASEREAD.txt  README.md
exercise6/samples/: file2.txt  library_2_invalid_encoding.txt
exercise6/src/: __main__.py  levenshtein_base.py  levenshtein_cli.py
exercise6/tests/: test_customizable_levenshtein_calculator.py  test_levenshtein.py  test_main_function.py
exercise7/: README.md  numerical_data_processing.ipynb  requirements.txt
